Bug 1858942 - Fix thread pane display options button getting squished. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D190927

--- a/mail/themes/shared/mail/threadPane.css
+++ b/mail/themes/shared/mail/threadPane.css
@@ -812,4 +812,5 @@ tr[data-properties~="thread-children"] + tr:not([data-properties~="thread-childr
 #threadPaneDisplayButton {
   background-image: var(--icon-display-options);
   margin: 0;
+  flex-shrink: 0;
 }
